// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots All Components/Blockquote With Citation 1`] = `
<blockquote
  className="sc-bdVaJa gmSXkm"
>
  <q
    className="sc-bwzfXH gqIjTA"
  >
    Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to think if they should.
  </q>
  <cite
    className="sc-htpNat eaMNlw"
  >
    Ian Malcolm
  </cite>
</blockquote>
`;

exports[`Storyshots All Components/Blockquote Without Citation 1`] = `
<blockquote
  className="sc-bdVaJa gmSXkm"
>
  <q
    className="sc-bwzfXH gqIjTA"
  >
    Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to think if they should.
  </q>
</blockquote>
`;

exports[`Storyshots All Components/Breadcrumbs Normal 1`] = `
<ol
  className="sc-bxivhb jDlCTU"
>
  <li
    className="sc-ifAKCX TSOqM"
  >
    <a
      className="sc-EHOje eTLzlg"
      href="/#"
      onClick={[Function]}
    >
      Industry
    </a>
  </li>
  <li
    className="sc-ifAKCX TSOqM"
  >
    <a
      className="sc-EHOje eTLzlg"
      href="/#"
      onClick={[Function]}
    >
      Get funding
    </a>
  </li>
  <li
    className="sc-ifAKCX TSOqM"
  >
    Find a fund to create films, TV or new formats of storytelling
  </li>
</ol>
`;

exports[`Storyshots All Components/Breadcrumbs Wrapping 1`] = `
<ol
  className="sc-bxivhb jDlCTU"
>
  <li
    className="sc-ifAKCX TSOqM"
  >
    <a
      className="sc-EHOje eTLzlg"
      href="/#"
      onClick={[Function]}
    >
      Industry
    </a>
  </li>
  <li
    className="sc-ifAKCX TSOqM"
  >
    <a
      className="sc-EHOje eTLzlg"
      href="/#"
      onClick={[Function]}
    >
      Get funding
    </a>
  </li>
  <li
    className="sc-ifAKCX TSOqM"
  >
    <a
      className="sc-EHOje eTLzlg"
      href="/#"
      onClick={[Function]}
    >
      Find a fund to create films, TV or new formats of storytelling
    </a>
  </li>
  <li
    className="sc-ifAKCX TSOqM"
  >
    Find a fund to create films, TV or new formats of storytelling
  </li>
</ol>
`;

exports[`Storyshots All Components/Divider Normal 1`] = `
<hr
  className="sc-bZQynM hsboVq"
/>
`;

exports[`Storyshots All Components/Header Opaque Background 1`] = `
Array [
  <div
    className="sc-dnqmqq hWoFnQ"
  >
    <div
      className="sc-iwsKbI donGFy"
    >
      <ul
        className="sc-gZMcBi aaMCa"
      >
        <li
          className="sc-gqjmRU jkolre"
        >
          <a
            href="https://whatson.bfi.org.uk/Online/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Buy tickets
          </a>
        </li>
        <li
          className="sc-gqjmRU jkolre"
        >
          <a
            href="https://player.bfi.org.uk/"
            rel="noopener noreferrer"
            target="_blank"
          >
            BFI Player
          </a>
        </li>
        <li
          className="sc-gqjmRU jkolre"
        >
          <a
            href="/"
            rel="noopener noreferrer"
          >
            Become a member
          </a>
        </li>
      </ul>
    </div>
  </div>,
  <header
    className="sc-iAyFgw hvCcwb"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="sc-hSdWYo bciCKe"
    >
      <a
        aria-current="page"
        className="sc-eHgmQL fSBpaS"
        href="/"
        onClick={[Function]}
      >
        <img
          alt="British Film Institute"
          className="sc-cvbbAY bbfftQ"
          src="test-file-stub"
        />
      </a>
      <nav
        className="sc-kpOJdX kWwZDq"
      >
        <ul
          className="sc-dxgOiQ cDRizH"
        >
          <li
            className="sc-ckVGcZ dnhDDR"
          >
            <a
              active={true}
              aria-haspopup="true"
              className="sc-jKJlTe iffpxD"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Watch
            </a>
          </li>
          <li
            className="sc-ckVGcZ dnhDDR"
          >
            <a
              aria-haspopup="true"
              className="sc-jKJlTe fTjBpZ"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Discover
            </a>
          </li>
          <li
            className="sc-ckVGcZ dnhDDR"
          >
            <a
              aria-haspopup="true"
              className="sc-jKJlTe fTjBpZ"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Industry
            </a>
          </li>
          <li
            className="sc-ckVGcZ dnhDDR"
          >
            <a
              aria-haspopup="true"
              className="sc-jKJlTe fTjBpZ"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Learn
            </a>
          </li>
          <li
            className="sc-ckVGcZ dnhDDR"
          >
            <a
              aria-haspopup="true"
              className="sc-jKJlTe fTjBpZ"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              About
            </a>
          </li>
          <li
            className="sc-ckVGcZ dnhDDR"
          >
            <a
              aria-haspopup="true"
              className="sc-jKJlTe fTjBpZ"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Join
            </a>
          </li>
        </ul>
      </nav>
      <button
        aria-controls="menu-panel"
        aria-expanded="false"
        className="sc-kGXeez XlhIO"
        onClick={[Function]}
      >
        Menu
        <div
          className="sc-kgoBCf hUHOBQ"
          open={false}
        >
          <div />
        </div>
      </button>
      <button
        className="sc-gzVnrw dfWIcQ"
      >
        <img
          alt=""
          className="sc-htoDjs zTKVr"
          src="test-file-stub"
        />
        Search
      </button>
    </div>
  </header>,
]
`;

exports[`Storyshots All Components/Header Transparent Background 1`] = `
Array [
  <div
    className="sc-dnqmqq hWoFnQ"
  >
    <div
      className="sc-iwsKbI donGFy"
    >
      <ul
        className="sc-gZMcBi aaMCa"
      >
        <li
          className="sc-gqjmRU jkolre"
        >
          <a
            href="https://whatson.bfi.org.uk/Online/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Buy tickets
          </a>
        </li>
        <li
          className="sc-gqjmRU jkolre"
        >
          <a
            href="https://player.bfi.org.uk/"
            rel="noopener noreferrer"
            target="_blank"
          >
            BFI Player
          </a>
        </li>
        <li
          className="sc-gqjmRU jkolre"
        >
          <a
            href="/"
            rel="noopener noreferrer"
          >
            Become a member
          </a>
        </li>
      </ul>
    </div>
  </div>,
  <header
    className="sc-iAyFgw efXnNz"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="sc-hSdWYo bciCKe"
    >
      <a
        aria-current="page"
        className="sc-eHgmQL fSBpaS"
        href="/"
        onClick={[Function]}
      >
        <img
          alt="British Film Institute"
          className="sc-cvbbAY bbfftQ"
          src="test-file-stub"
        />
      </a>
      <nav
        className="sc-kpOJdX kWwZDq"
      >
        <ul
          className="sc-dxgOiQ cDRizH"
        >
          <li
            className="sc-ckVGcZ dnhDDR"
          >
            <a
              active={true}
              aria-haspopup="true"
              className="sc-jKJlTe hSNGFC"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Watch
            </a>
          </li>
          <li
            className="sc-ckVGcZ dnhDDR"
          >
            <a
              aria-haspopup="true"
              className="sc-jKJlTe iBdLro"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Discover
            </a>
          </li>
          <li
            className="sc-ckVGcZ dnhDDR"
          >
            <a
              aria-haspopup="true"
              className="sc-jKJlTe iBdLro"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Industry
            </a>
          </li>
          <li
            className="sc-ckVGcZ dnhDDR"
          >
            <a
              aria-haspopup="true"
              className="sc-jKJlTe iBdLro"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Learn
            </a>
          </li>
          <li
            className="sc-ckVGcZ dnhDDR"
          >
            <a
              aria-haspopup="true"
              className="sc-jKJlTe iBdLro"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              About
            </a>
          </li>
          <li
            className="sc-ckVGcZ dnhDDR"
          >
            <a
              aria-haspopup="true"
              className="sc-jKJlTe iBdLro"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Join
            </a>
          </li>
        </ul>
      </nav>
      <button
        aria-controls="menu-panel"
        aria-expanded="false"
        className="sc-kGXeez XlhIO"
        onClick={[Function]}
      >
        Menu
        <div
          className="sc-kgoBCf hUHOBQ"
          open={false}
        >
          <div />
        </div>
      </button>
      <button
        className="sc-gzVnrw qEutE"
      >
        <img
          alt=""
          className="sc-htoDjs zTKVr"
          src="test-file-stub"
        />
        Search
      </button>
    </div>
  </header>,
]
`;

exports[`Storyshots All Components/Header With Overflowing Content 1`] = `
Array [
  <div
    className="sc-dnqmqq hWoFnQ"
  >
    <div
      className="sc-iwsKbI donGFy"
    >
      <ul
        className="sc-gZMcBi aaMCa"
      >
        <li
          className="sc-gqjmRU jkolre"
        >
          <a
            href="https://whatson.bfi.org.uk/Online/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Buy tickets
          </a>
        </li>
        <li
          className="sc-gqjmRU jkolre"
        >
          <a
            href="https://player.bfi.org.uk/"
            rel="noopener noreferrer"
            target="_blank"
          >
            BFI Player
          </a>
        </li>
        <li
          className="sc-gqjmRU jkolre"
        >
          <a
            href="/"
            rel="noopener noreferrer"
          >
            Become a member
          </a>
        </li>
      </ul>
    </div>
  </div>,
  <header
    className="sc-iAyFgw hvCcwb"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="sc-hSdWYo bciCKe"
    >
      <a
        aria-current="page"
        className="sc-eHgmQL fSBpaS"
        href="/"
        onClick={[Function]}
      >
        <img
          alt="British Film Institute"
          className="sc-cvbbAY bbfftQ"
          src="test-file-stub"
        />
      </a>
      <nav
        className="sc-kpOJdX kWwZDq"
      >
        <ul
          className="sc-dxgOiQ cDRizH"
        >
          <li
            className="sc-ckVGcZ dnhDDR"
          >
            <a
              active={true}
              aria-haspopup="true"
              className="sc-jKJlTe iffpxD"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Watch
            </a>
          </li>
          <li
            className="sc-ckVGcZ dnhDDR"
          >
            <a
              aria-haspopup="true"
              className="sc-jKJlTe fTjBpZ"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Discover
            </a>
          </li>
          <li
            className="sc-ckVGcZ dnhDDR"
          >
            <a
              aria-haspopup="true"
              className="sc-jKJlTe fTjBpZ"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Industry
            </a>
          </li>
          <li
            className="sc-ckVGcZ dnhDDR"
          >
            <a
              aria-haspopup="true"
              className="sc-jKJlTe fTjBpZ"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Learn
            </a>
          </li>
          <li
            className="sc-ckVGcZ dnhDDR"
          >
            <a
              aria-haspopup="true"
              className="sc-jKJlTe fTjBpZ"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              About
            </a>
          </li>
          <li
            className="sc-ckVGcZ dnhDDR"
          >
            <a
              aria-haspopup="true"
              className="sc-jKJlTe fTjBpZ"
              hovered={false}
              href="/#"
              isWhite={false}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Join
            </a>
          </li>
        </ul>
      </nav>
      <button
        aria-controls="menu-panel"
        aria-expanded="false"
        className="sc-kGXeez XlhIO"
        onClick={[Function]}
      >
        Menu
        <div
          className="sc-kgoBCf hUHOBQ"
          open={false}
        >
          <div />
        </div>
      </button>
      <button
        className="sc-gzVnrw dfWIcQ"
      >
        <img
          alt=""
          className="sc-htoDjs zTKVr"
          src="test-file-stub"
        />
        Search
      </button>
    </div>
  </header>,
  <div
    style={
      Object {
        "background": "linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(0,0,0,1) 100%)",
        "height": "200vh",
        "width": "100%",
      }
    }
  />,
]
`;

exports[`Storyshots All Components/Headline Level 1 1`] = `
<h1
  className="sc-jWBwVP kJSPCH"
>
  My example headline
</h1>
`;

exports[`Storyshots All Components/Headline Level 2 1`] = `
<h2
  className="sc-brqgnP gehdUp"
>
  My example headline
</h2>
`;

exports[`Storyshots All Components/Headline Level 3 1`] = `
<h3
  className="sc-cMljjf kOuQFm"
>
  My example headline
</h3>
`;

exports[`Storyshots All Components/Hero Full Height 1`] = `
<section
  className="sc-jDwBTQ jvLuYU"
>
  <div
    className="sc-gPEVay gUyNLQ"
  >
    <h1
      className="sc-jWBwVP kJSPCH"
    >
      Watch a new film, rediscover your old favourites, and get inspired.
    </h1>
  </div>
</section>
`;

exports[`Storyshots All Components/Hero Normal 1`] = `
<section
  className="sc-jDwBTQ kDaKur"
>
  <div
    className="sc-gPEVay gUyNLQ"
  >
    <h1
      className="sc-jWBwVP kJSPCH"
    >
      Watch a new film, rediscover your old favourites, and get inspired.
    </h1>
  </div>
</section>
`;

exports[`Storyshots All Components/Hero With Header 1`] = `
Array [
  <div
    className="sc-dnqmqq hWoFnQ"
  >
    <div
      className="sc-iwsKbI donGFy"
    >
      <ul
        className="sc-gZMcBi aaMCa"
      >
        <li
          className="sc-gqjmRU jkolre"
        >
          <a
            href="https://whatson.bfi.org.uk/Online/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Buy tickets
          </a>
        </li>
        <li
          className="sc-gqjmRU jkolre"
        >
          <a
            href="https://player.bfi.org.uk/"
            rel="noopener noreferrer"
            target="_blank"
          >
            BFI Player
          </a>
        </li>
        <li
          className="sc-gqjmRU jkolre"
        >
          <a
            href="/"
            rel="noopener noreferrer"
          >
            Become a member
          </a>
        </li>
      </ul>
    </div>
  </div>,
  <header
    className="sc-iAyFgw efXnNz"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="sc-hSdWYo bciCKe"
    >
      <a
        aria-current="page"
        className="sc-eHgmQL fSBpaS"
        href="/"
        onClick={[Function]}
      >
        <img
          alt="British Film Institute"
          className="sc-cvbbAY bbfftQ"
          src="test-file-stub"
        />
      </a>
      <nav
        className="sc-kpOJdX kWwZDq"
      >
        <ul
          className="sc-dxgOiQ cDRizH"
        >
          <li
            className="sc-ckVGcZ dnhDDR"
          >
            <a
              active={true}
              aria-haspopup="true"
              className="sc-jKJlTe hSNGFC"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Watch
            </a>
          </li>
          <li
            className="sc-ckVGcZ dnhDDR"
          >
            <a
              aria-haspopup="true"
              className="sc-jKJlTe iBdLro"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Discover
            </a>
          </li>
          <li
            className="sc-ckVGcZ dnhDDR"
          >
            <a
              aria-haspopup="true"
              className="sc-jKJlTe iBdLro"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Industry
            </a>
          </li>
          <li
            className="sc-ckVGcZ dnhDDR"
          >
            <a
              aria-haspopup="true"
              className="sc-jKJlTe iBdLro"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Learn
            </a>
          </li>
          <li
            className="sc-ckVGcZ dnhDDR"
          >
            <a
              aria-haspopup="true"
              className="sc-jKJlTe iBdLro"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              About
            </a>
          </li>
          <li
            className="sc-ckVGcZ dnhDDR"
          >
            <a
              aria-haspopup="true"
              className="sc-jKJlTe iBdLro"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
            >
              Join
            </a>
          </li>
        </ul>
      </nav>
      <button
        aria-controls="menu-panel"
        aria-expanded="false"
        className="sc-kGXeez XlhIO"
        onClick={[Function]}
      >
        Menu
        <div
          className="sc-kgoBCf hUHOBQ"
          open={false}
        >
          <div />
        </div>
      </button>
      <button
        className="sc-gzVnrw qEutE"
      >
        <img
          alt=""
          className="sc-htoDjs zTKVr"
          src="test-file-stub"
        />
        Search
      </button>
    </div>
  </header>,
  <section
    className="sc-jDwBTQ kDaKur"
  >
    <div
      className="sc-gPEVay gUyNLQ"
    >
      <h1
        className="sc-jWBwVP kJSPCH"
      >
        Watch a new film, rediscover your old favourites, and get inspired.
      </h1>
    </div>
  </section>,
]
`;

exports[`Storyshots All Components/Images Normal 1`] = `
<div
  style={
    Object {
      "margin": "0 auto",
      "maxWidth": "1000px",
      "padding": "20px",
    }
  }
>
  <figure
    className="sc-iRbamj bbEgxS"
  >
    <div
      className="sc-gipzik hxSCoW"
    >
      <button
        className="sc-csuQGl gyIced"
        onClick={[Function]}
      >
        <img
          alt="Example image"
          className="sc-Rmtcm eHzSUO"
          src="http://placehold.it/300x200"
        />
      </button>
      <button
        className="sc-csuQGl gyIced"
        onClick={[Function]}
      >
        <img
          alt="Example image 2"
          className="sc-Rmtcm eHzSUO"
          src="http://placehold.it/200x300"
        />
      </button>
      <button
        className="sc-csuQGl gyIced"
        onClick={[Function]}
      >
        <img
          alt="Example image 3"
          className="sc-Rmtcm eHzSUO"
          src="http://placehold.it/600x400"
        />
      </button>
    </div>
    <figcaption
      className="sc-jlyJG QEEzZ"
    >
      A gallery of three images
    </figcaption>
  </figure>
</div>
`;

exports[`Storyshots All Components/Images Not Clickable 1`] = `
<div
  style={
    Object {
      "margin": "0 auto",
      "maxWidth": "1000px",
      "padding": "20px",
    }
  }
>
  <figure
    className="sc-iRbamj bbEgxS"
  >
    <div
      className="sc-gipzik hxSCoW"
    >
      <img
        alt="Example image"
        className="sc-Rmtcm xqeCv"
        src="http://placehold.it/300x200"
      />
      <img
        alt="Example image 2"
        className="sc-Rmtcm xqeCv"
        src="http://placehold.it/200x300"
      />
      <img
        alt="Example image 3"
        className="sc-Rmtcm xqeCv"
        src="http://placehold.it/600x400"
      />
    </div>
    <figcaption
      className="sc-jlyJG QEEzZ"
    >
      A gallery of three images
    </figcaption>
  </figure>
</div>
`;

exports[`Storyshots All Components/Images Only One 1`] = `
<div
  style={
    Object {
      "margin": "0 auto",
      "maxWidth": "1000px",
      "padding": "20px",
    }
  }
>
  <figure
    className="sc-iRbamj bbEgxS"
  >
    <div
      className="sc-gipzik biUmFd"
    >
      <button
        className="sc-csuQGl gyIced"
        onClick={[Function]}
      >
        <img
          alt="Example image"
          className="sc-Rmtcm eHzSUO"
          src="http://placehold.it/300x200"
        />
      </button>
    </div>
    <figcaption
      className="sc-jlyJG QEEzZ"
    >
      A single full-width image
    </figcaption>
  </figure>
</div>
`;

exports[`Storyshots All Components/Lead paragraph Normal 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <article
    className="sc-hzDkRC iUdeUs"
  >
    We gotta burn the rain forest, dump toxic waste, pollute the air, and rip up the OZONE! 'Cause maybe if we screw up this planet enough, they won't want it anymore! We gotta burn the rain forest, dump toxic waste, pollute the air, and rip up the OZONE! 'Cause maybe if we screw up this planet enough, they won't want it anymore!
  </article>
</div>
`;

exports[`Storyshots All Components/PageLinks Eight Links 1`] = `
<ul
  className="sc-eqIVtm beiEze"
>
  <li
    className="sc-jhAzac PraVs"
  >
    <h4
      className="sc-jAaTju dZWPCh"
    >
      Industry fund
    </h4>
    <p
      className="sc-fBuWsC gnEfjm"
    >
      What do they got in there? King Kong? You know what? It is beets. I've crashed into a beet truck. Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to think if they should.
    </p>
    <a
      className="sc-fMiknA gTYpDf"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-dVhcbM cwpKct"
        src="test-file-stub"
      />
    </a>
  </li>
  <li
    className="sc-jhAzac PraVs"
  >
    <h4
      className="sc-jAaTju dZWPCh"
    >
      Get funding fund
    </h4>
    <p
      className="sc-fBuWsC gnEfjm"
    >
      Yeah, but John, if The Pirates of the Caribbean breaks down, the pirates don’t eat the tourists.
    </p>
    <a
      className="sc-fMiknA gTYpDf"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-dVhcbM cwpKct"
        src="test-file-stub"
      />
    </a>
  </li>
  <li
    className="sc-jhAzac PraVs"
  >
    <h4
      className="sc-jAaTju dZWPCh"
    >
      Get funding fund
    </h4>
    <p
      className="sc-fBuWsC gnEfjm"
    >
      Yeah, but John, if The Pirates of the Caribbean breaks down, the pirates don’t eat the tourists.
    </p>
    <a
      className="sc-fMiknA gTYpDf"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-dVhcbM cwpKct"
        src="test-file-stub"
      />
    </a>
  </li>
  <li
    className="sc-jhAzac PraVs"
  >
    <h4
      className="sc-jAaTju dZWPCh"
    >
      Find a fund
    </h4>
    <p
      className="sc-fBuWsC gnEfjm"
    >
      Yes, Yes, without the oops! Hey, take a look at the earthlings. Goodbye!
    </p>
    <a
      className="sc-fMiknA gTYpDf"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-dVhcbM cwpKct"
        src="test-file-stub"
      />
    </a>
  </li>
  <li
    className="sc-jhAzac PraVs"
  >
    <h4
      className="sc-jAaTju dZWPCh"
    >
      Industry fund
    </h4>
    <p
      className="sc-fBuWsC gnEfjm"
    >
      What do they got in there? King Kong? You know what? It is beets. I've crashed into a beet truck. Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to think if they should.
    </p>
    <a
      className="sc-fMiknA gTYpDf"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-dVhcbM cwpKct"
        src="test-file-stub"
      />
    </a>
  </li>
  <li
    className="sc-jhAzac PraVs"
  >
    <h4
      className="sc-jAaTju dZWPCh"
    >
      Get funding fund
    </h4>
    <p
      className="sc-fBuWsC gnEfjm"
    >
      Yeah, but John, if The Pirates of the Caribbean breaks down, the pirates don’t eat the tourists.
    </p>
    <a
      className="sc-fMiknA gTYpDf"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-dVhcbM cwpKct"
        src="test-file-stub"
      />
    </a>
  </li>
  <li
    className="sc-jhAzac PraVs"
  >
    <h4
      className="sc-jAaTju dZWPCh"
    >
      Get funding fund
    </h4>
    <p
      className="sc-fBuWsC gnEfjm"
    >
      Yeah, but John, if The Pirates of the Caribbean breaks down, the pirates don’t eat the tourists.
    </p>
    <a
      className="sc-fMiknA gTYpDf"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-dVhcbM cwpKct"
        src="test-file-stub"
      />
    </a>
  </li>
  <li
    className="sc-jhAzac PraVs"
  >
    <h4
      className="sc-jAaTju dZWPCh"
    >
      Find a fund
    </h4>
    <p
      className="sc-fBuWsC gnEfjm"
    >
      Yes, Yes, without the oops! Hey, take a look at the earthlings. Goodbye!
    </p>
    <a
      className="sc-fMiknA gTYpDf"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-dVhcbM cwpKct"
        src="test-file-stub"
      />
    </a>
  </li>
</ul>
`;

exports[`Storyshots All Components/PageLinks Four Links 1`] = `
<ul
  className="sc-eqIVtm beiEze"
>
  <li
    className="sc-jhAzac PraVs"
  >
    <h4
      className="sc-jAaTju dZWPCh"
    >
      Industry fund
    </h4>
    <p
      className="sc-fBuWsC gnEfjm"
    >
      What do they got in there? King Kong? You know what? It is beets. I've crashed into a beet truck. Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to think if they should.
    </p>
    <a
      className="sc-fMiknA gTYpDf"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-dVhcbM cwpKct"
        src="test-file-stub"
      />
    </a>
  </li>
  <li
    className="sc-jhAzac PraVs"
  >
    <h4
      className="sc-jAaTju dZWPCh"
    >
      Get funding fund
    </h4>
    <p
      className="sc-fBuWsC gnEfjm"
    >
      Yeah, but John, if The Pirates of the Caribbean breaks down, the pirates don’t eat the tourists.
    </p>
    <a
      className="sc-fMiknA gTYpDf"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-dVhcbM cwpKct"
        src="test-file-stub"
      />
    </a>
  </li>
  <li
    className="sc-jhAzac PraVs"
  >
    <h4
      className="sc-jAaTju dZWPCh"
    >
      Get funding fund
    </h4>
    <p
      className="sc-fBuWsC gnEfjm"
    >
      Yeah, but John, if The Pirates of the Caribbean breaks down, the pirates don’t eat the tourists.
    </p>
    <a
      className="sc-fMiknA gTYpDf"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-dVhcbM cwpKct"
        src="test-file-stub"
      />
    </a>
  </li>
  <li
    className="sc-jhAzac PraVs"
  >
    <h4
      className="sc-jAaTju dZWPCh"
    >
      Find a fund
    </h4>
    <p
      className="sc-fBuWsC gnEfjm"
    >
      Yes, Yes, without the oops! Hey, take a look at the earthlings. Goodbye!
    </p>
    <a
      className="sc-fMiknA gTYpDf"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-dVhcbM cwpKct"
        src="test-file-stub"
      />
    </a>
  </li>
</ul>
`;

exports[`Storyshots All Components/PageLinks Three Links 1`] = `
<ul
  className="sc-eqIVtm beiEze"
>
  <li
    className="sc-jhAzac PraVs"
  >
    <h4
      className="sc-jAaTju dZWPCh"
    >
      Industry fund
    </h4>
    <p
      className="sc-fBuWsC gnEfjm"
    >
      What do they got in there? King Kong? You know what? It is beets. I've crashed into a beet truck. Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to think if they should.
    </p>
    <a
      className="sc-fMiknA gTYpDf"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-dVhcbM cwpKct"
        src="test-file-stub"
      />
    </a>
  </li>
  <li
    className="sc-jhAzac PraVs"
  >
    <h4
      className="sc-jAaTju dZWPCh"
    >
      Get funding fund
    </h4>
    <p
      className="sc-fBuWsC gnEfjm"
    >
      Yeah, but John, if The Pirates of the Caribbean breaks down, the pirates don’t eat the tourists.
    </p>
    <a
      className="sc-fMiknA gTYpDf"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-dVhcbM cwpKct"
        src="test-file-stub"
      />
    </a>
  </li>
  <li
    className="sc-jhAzac PraVs"
  >
    <h4
      className="sc-jAaTju dZWPCh"
    >
      Get funding fund
    </h4>
    <p
      className="sc-fBuWsC gnEfjm"
    >
      Yeah, but John, if The Pirates of the Caribbean breaks down, the pirates don’t eat the tourists.
    </p>
    <a
      className="sc-fMiknA gTYpDf"
      colorScheme={0}
      href="/#"
      onClick={[Function]}
    >
      Apply to this fund
      <img
        alt=""
        className="sc-dVhcbM cwpKct"
        src="test-file-stub"
      />
    </a>
  </li>
</ul>
`;

exports[`Storyshots All Components/Text Normal 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <article
    className="sc-fAjcbJ gXXJnw"
  >
    

            
    <p>
      We gotta burn the rain forest, 
      <strong>
        dump toxic waste
      </strong>
      , pollute the air, and 
      <a
        href="#"
      >
        rip up the OZONE!
      </a>
       'Cause maybe if we screw up this planet enough, they won't want it anymore! We gotta burn the rain forest, dump toxic waste, pollute the air, and rip up the OZONE! 'Cause maybe if we screw up this planet enough, they won't want it anymore!
    </p>
    

            
    <ol>
      
                
      <li>
        What do they got in there? King Kong?
      </li>
      
                
      <li>
        You really think you can fly that thing?
      </li>
      
                
      <li>
        Must go faster
      </li>
      
            
    </ol>
    

            
    <p>
      You really think you can fly that thing? Eventually, you do plan to have dinosaurs on your dinosaur tour, right? 
      <a
        href="#"
      >
        I gave it a cold?
      </a>
       I gave it a virus. A computer virus. Did he just throw my cat out of the window? You're a very talented young man, with your own clever thoughts and ideas. Do you need a manager?
    </p>
    

            
    <ul>
      
                
      <li>
        What do they got in there? King Kong?
      </li>
      
                
      <li>
        You really think you can fly that thing?
      </li>
      
                
      <li>
        Must go faster
      </li>
      
            
    </ul>
    
            
            
  </article>
</div>
`;
